# Change Log
All notable changes to this project will be documented in this file.

## [3.0.2] - 2017-02-09
# Changed
- Bitbucket API HTTP calls were optimized to avoid full-scan (and throttling by Bitbucket)
# Added
- The abstract Git HOST API allows for filtering when listing pull requests

## [3.0.1] - 2017-02-07
# Fixed
- Some exceptions slipped through and killed the BertE worker thread in the server
- Tasks were set in reversed order on bitbucket

## [3.0.0] - 2017-02-06
# Changed
- dropped Python 2 support, in favor of Python 3.5+
- defined an abstract git_host API for Bitbucket and similar services
- major refactoring: the big bert_e.bert_e module was exploded in independent packages
- support for Bitbucket's STOPPED build status

## [2.0.10] - 2017-01-23
# Changed
- do not fail in case the internal API of tasks has changed at bitbucket
# Fixed
- fixed init message when there is no default review tasks for the project

## [2.0.9] - 2017-01-18
# Added
- customized review tasks auto-creation on init
# Fixed
- unstarted builds in queue show as NOTSTARTED rather than INPROGRESS
# Changed
- removed reference to Jira ticket types `EPIC` in documentation

## [2.0.8] - 2016-12-30
# Changed
- Bert-E is now provided as an installable package
- optimised templating for status page
- information added to status page: merge date, details of internal errors
# Fixed
- server tests can now run individually
- fixed tests based on get_pull_request
- fixed permanent CommandError for new repositories

## [2.0.7] - 2016-12-23
# Changed
- faster retrieval of all git branches using mirror clones
- removed the --reference option as it was replaced by an internal git cache

## [2.0.6] - 2016-12-20
# Changed
- monitoring page is now in HTML
- delayed git clone and added an ls-remote cache to speed bert-e up

## [2.0.4] - 2016-11-16
# Changed
- moved settings to per-project files
- renamed tools to Bert-E / server
- update documentation files
# Added
- added user documentation