@@ -91,7 +91,11 @@ def handle_pull_request(job):
             for branch in wbranches:
                 branch.reset()
     finally:
-        push(job.git.repo, wbranches)
+        # Do not push empty integration branches
+        to_push = [branch for branch in wbranches
+                   if branch.get_commit_diff(branch.dst_branch)]
+        if to_push:
+            push(job.git.repo, to_push)
 
     child_prs = create_integration_pull_requests(job, wbranches)
 
